Correct alignment of label cells in RTL

--- a/css/textpattern.css
+++ b/css/textpattern.css
@@ -1923,6 +1923,17 @@ span.spinner {
   float: left;
   width: 50%;
 }
+[dir="rtl"] .txp-label, [dir="rtl"]
+.txp-value {
+  float: right;
+}
+
+.txp-login .txp-label {
+  width: 31%;
+}
+.txp-login .txp-value {
+  width: 69%;
+}
 
 .txp-value input,
 .txp-value select {
@@ -1936,44 +1947,22 @@ span.spinner {
 }
 
 /* deprecated @ 4.6 */
-.edit-label,
-.login-label {
+.edit-label {
   display: inline-block;
   float: left;
-}
-
-/* deprecated @ 4.6 */
-.edit-label {
   width: 42%;
 }
 
 /* deprecated @ 4.6 */
-.login-label {
-  width: 31%;
-}
-
-/* deprecated @ 4.6 */
-.edit-value,
-.login-value {
+.edit-value {
   display: inline-block;
   float: right;
-}
-.edit-value input,
-.edit-value select,
-.login-value input,
-.login-value select {
-  margin-top: -0.23076em;
-  margin-bottom: -0.23076em;
-}
-
-/* deprecated @ 4.6 */
-.edit-value {
   width: 58%;
 }
-
-/* deprecated @ 4.6 */
-.login-value {
-  width: 69%;
+.edit-value input,
+.edit-value select {
+  margin-top: -0.23076em;
+  margin-bottom: -0.23076em;
 }
 
 /* TBC (for modals @ 4.6) */
